fix: update schemas
