# core/serializers.py
@@ -2,15 +2,23 @@ from django.contrib.auth.models import User
 from rest_framework import serializers
 from .models import Entry, Habit
 
-
 class UserSerializer(serializers.ModelSerializer):
     class Meta:
         model = User
-        fields = ["id", "username", "password"]
-        extra_kwargs = {"password": {"write_only": True}}
+        fields = ["id", "username", "email", "password"]
+        extra_kwargs = {"password": { "write_only": True }}
 
     def create(self, validated_data):
         return User.objects.create_user(**validated_data)
+
+class CreateUserSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = User
+        fields = ["username", "email", "password"]
+
+    def create(self, validated_data):
+        return User.objects.create_user(**validated_data)
+
 
 class HabitSerializer(serializers.ModelSerializer):
     class Meta:
