# habits_tracker/urls.py
@@ -18,15 +18,15 @@ Including another URLconf
 from django.contrib import admin
 from django.urls import include, path
 from core.views import CreateUserView, UserDetailView, WhoAmIView
-from rest_framework_simplejwt.views import TokenObtainPairView, TokenRefreshView
+from .views import WrapperTokenObtainPairView, WrapperTokenRefreshView
 
 urlpatterns = [
     path("admin/", admin.site.urls),
     path("api/user/register/", CreateUserView.as_view(), name="register"),
     path("api/users/<int:pk>/", UserDetailView.as_view(), name="user-detail"),
     path("api/whoami/", WhoAmIView.as_view(), name="whoami"),
-    path("api/token/", TokenObtainPairView.as_view(), name="get_token"),
-    path("api/token/refresh/", TokenRefreshView.as_view(), name="refresh"),
+    path("api/token/", WrapperTokenObtainPairView.as_view(), name="get_token"),
+    path("api/token/refresh/", WrapperTokenRefreshView.as_view(), name="refresh"),
     path("api-auth/", include("rest_framework.urls")),
     path("api/", include("core.urls")),
 ]
